--- a/FWShareKit/FWShareKit/Info.plist
+++ b/FWShareKit/FWShareKit/Info.plist
@@ -25,7 +25,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>fb314893845361998</string>
+				<string>fb123123123123</string>
 			</array>
 		</dict>
 		<dict>
@@ -41,6 +41,10 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>FacebookAppID</key>
+	<string>23123123123</string>
+	<key>FacebookDisplayName</key>
+	<string>FWShareKit</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
